--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@
 /bin/*
 !bin/console
 !bin/symfony_requirements
-/vendor/
+/vendors/*
+!vendors/friendofsymfony/*
 
 # Assets and user uploads
 /web/bundles/
