--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+social_pro_user:
+    resource: "@SocialProUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
 social_pro_main:
     resource: "@SocialProMainBundle/Resources/config/routing.yml"
     prefix:   /
