"preparation du profil du user"

--- a/src/SocialPro/MainBundle/Resources/config/routing.yml
+++ b/src/SocialPro/MainBundle/Resources/config/routing.yml
@@ -8,3 +8,7 @@ mainpage:
 profile2:
     path:     /profile2
     defaults: { _controller: SocialProMainBundle:SocialPro:profile2 }
+
+parametresprofil:
+    path:     /paraprofile
+    defaults: { _controller: SocialProMainBundle:SocialPro:parametresprofil }
