ajout d'un bundle, des pages twig et une entité

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+project:
+    resource: "@ProjectBundle/Resources/config/routing.yml"
+    prefix:   /
+
 social_pro_user:
     resource: "@SocialProUserBundle/Resources/config/routing.yml"
     prefix:   /
