Mise a jour de la page detaillé du projet ( ajout modifer et lien vers la page )(s'affiche sous condition) ajout de la page modification de projet ( sous condition )

--- a/src/SocialPro/ProjectBundle/Resources/config/routing.yml
+++ b/src/SocialPro/ProjectBundle/Resources/config/routing.yml
@@ -11,7 +11,7 @@ project_remove:
     path:     /project_search
     defaults: { _controller: ProjectBundle:Project:search }
 project_edit:
-    path:     /project_edit
+    path:     /project_edit/{id}
     defaults: { _controller: ProjectBundle:Project:edit }
 project_select:
     path:     /project/{id}
